--- a/MNEMONIC_Project/MNEMONIC_Project.uproject
+++ b/MNEMONIC_Project/MNEMONIC_Project.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "MNEMONIC_Project",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
