StateManager component added, bugs free

--- a/MNEMONIC_Project/Config/DefaultEngine.ini
+++ b/MNEMONIC_Project/Config/DefaultEngine.ini
@@ -68,7 +68,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Maps/Prototyping.Prototyping
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/MNEMONIC_Project.MNEMONIC_ProjectGameMode
+GlobalDefaultGameMode=/Game/Maps/CustomGameMode.CustomGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
