updates to junglegym map

--- a/MNEMONIC_Project/Config/DefaultEngine.ini
+++ b/MNEMONIC_Project/Config/DefaultEngine.ini
@@ -68,7 +68,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/Prototyping.Prototyping
+GameDefaultMap=/Game/Maps/JungleGymv1.JungleGymV1
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/Maps/CustomGameMode.CustomGameMode_C
 GlobalDefaultServerGameMode=None
