PlayerCharacter keeps track of number of strikes set in Corruption Timer

--- a/MNEMONIC_Project/Config/DefaultEngine.ini
+++ b/MNEMONIC_Project/Config/DefaultEngine.ini
@@ -91,3 +91,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="MNEMONIC_ProjectGameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="MNEMONIC_ProjectCharacter")
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/MNEMONIC_Project.PlayerStatsWidget.MaxTimer_Minutes",NewName="/Script/MNEMONIC_Project.PlayerStatsWidget.TimeTillStrike")
