Stats carry over next level - Game instance created

--- a/MNEMONIC_Project/Config/DefaultEngine.ini
+++ b/MNEMONIC_Project/Config/DefaultEngine.ini
@@ -67,7 +67,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/GI_Player.GI_Player_C
 GameDefaultMap=/Game/Maps/JungleGymv1.JungleGymV1
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/Maps/CustomGameMode.CustomGameMode_C
@@ -94,3 +94,4 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/MNEMONIC_Project.PlayerStatsWidget.MaxTimer_Minutes",NewName="/Script/MNEMONIC_Project.PlayerStatsWidget.TimeTillStrike")
+
