--- a/MNEMONIC_Project/Config/DefaultEngine.ini
+++ b/MNEMONIC_Project/Config/DefaultEngine.ini
@@ -68,7 +68,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/Blueprints/GI_Player.GI_Player_C
-GameDefaultMap=/Game/Maps/JungleGymv1.JungleGymV1
+GameDefaultMap=/Game/Levels/SplashScreenLevel.SplashScreenLevel
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/Maps/CustomGameMode.CustomGameMode_C
 GlobalDefaultServerGameMode=None
