--- a/MNEMONIC_Project/Config/DefaultGame.ini
+++ b/MNEMONIC_Project/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ ProjectID=AD0A5A9E4A6F47B7C1A3DBAD65939EB2
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
-StagingDirectory=(Path="")
+StagingDirectory=(Path="C:/Users/raven/Desktop/apr 26 mnemonci test")
 FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
@@ -74,5 +74,8 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
++MapsToCook=(FilePath="/Game/Levels/SplashScreenLevel")
++MapsToCook=(FilePath="/Game/Levels/MainMenuLevel")
++MapsToCook=(FilePath="/Game/Levels/TutorialV4/TutorialLevelV4")
 +MapsToCook=(FilePath="/Game/Maps/JungleGymv1")
 
