First Sound Pass
- Adding sound effects for tutorial area

--- a/MNEMONIC_Project/Config/DefaultGame.ini
+++ b/MNEMONIC_Project/Config/DefaultGame.ini
@@ -7,9 +7,9 @@ ProjectID=AD0A5A9E4A6F47B7C1A3DBAD65939EB2
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 BuildTarget=
-StagingDirectory=(Path="C:/Users/raven/Desktop/apr 26 mnemonci test")
+StagingDirectory=(Path="C:/Users/raven/Desktop/May 2 Build")
 FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
@@ -76,6 +76,6 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Levels/SplashScreenLevel")
 +MapsToCook=(FilePath="/Game/Levels/MainMenuLevel")
-+MapsToCook=(FilePath="/Game/Levels/TutorialV4/TutorialLevelV4")
++MapsToCook=(FilePath="/Game/Levels/TutorialV5/TutorialLevelV5")
 +MapsToCook=(FilePath="/Game/Maps/JungleGymv1")
 
