flying enemy movement imported, bp_flying enemy created

--- a/MNEMONIC_Project/Config/DefaultEngine.ini
+++ b/MNEMONIC_Project/Config/DefaultEngine.ini
@@ -63,7 +63,7 @@
 +CollisionChannelRedirects=(OldName="Enemy",NewName="EnemyMark")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Prototyping.Prototyping
+EditorStartupMap=/Game/Levels/Maps/CombatPractice.CombatPractice
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
@@ -72,7 +72,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/Blueprints/GI_Player.GI_Player_C
 GameDefaultMap=/Game/Levels/SplashScreenLevel.SplashScreenLevel
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/Maps/CustomGameMode.CustomGameMode_C
+GlobalDefaultGameMode=/Game/Levels/Maps/CustomGameMode.CustomGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
